k8s/base/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: anime-role-detect
  labels:
    app.kubernetes.io/part-of: anime-role-detect
